# TASK-93

./: .gitignore  merge_claude_subagents_trajectory.py  metadata.json
repo/: .coveragerc  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  conftest.py  docker-compose.yml  run_tests.sh  sea-orm-cli.toml
repo/.claude/: settings.local.json
repo/API_tests/: conftest.py  test_analytics.py  test_analytics_extra.py  test_assets.py  test_audit.py  test_auth.py  test_backup_restore.py  test_billing.py  test_data_quality.py  test_e2e_workflow.py  test_edge_cases.py  test_events.py  test_rbac.py  test_rbac_edge_cases.py  test_results.py  test_vehicles.py
repo/frontend/: .env.local.example  README.md  jest.config.js  package.json
repo/frontend/__tests__/: assetFormModal.test.tsx  assetTable.test.tsx  dashboard.test.tsx  events.test.tsx  invoicesTable.test.tsx  login.test.tsx  withRoleGuard.test.tsx
repo/scripts/: dedup_trajectory.py
repo/src/: config.rs  crypto.rs  db.rs  errors.rs  main.rs
repo/src/analytics/: handlers.rs  mod.rs  service.rs
repo/src/assets/: handlers.rs  mod.rs  service.rs
repo/src/audit/: handlers.rs  mod.rs  service.rs
repo/src/auth/: guards.rs  handlers.rs  mod.rs  seeder.rs  service.rs
repo/src/backup/: handlers.rs  mod.rs  scheduler.rs  service.rs
repo/src/billing/: handlers.rs  mod.rs  service.rs
repo/unit_tests/: test_business_logic.py  test_data_quality_logic.py  test_encryption_logic.py  test_rbac_logic.py  test_results_logic.py  test_ruleset_logic.py  test_validation.py
(+164 files in other folders)
