[package]
name = "motorsport-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "motorsport-backend"
path = "src/main.rs"

[dependencies]
rocket      = { version = "0.5", features = ["json"] }
tokio       = { version = "1",   features = ["full"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1",   features = ["v4"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dotenvy     = "0.15"
thiserror   = "1"
chrono      = { version = "0.4", features = ["serde"] }
aes-gcm     = "0.10"
base64      = "0.22"
sha2        = "0.10"
hex         = "0.4"
hmac        = "0.12"

# Database
sea-orm           = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "chrono", "with-rust_decimal"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
rust_decimal      = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Auth
argon2      = "0.5"
async-trait = "0.1"
once_cell   = "1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
